// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate mock data functions 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '1550ff93-cd31-49b4-bc38-ef1cb68bdc38',
        url: 'aliquid',
        ...overrides
    });
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'b5756f00-51a6-422a-9a7d-c13ee6a63750',
        login: 'libero',
        avatar: anAvatar(),
        ...overrides
    });
};
"
`;

exports[`should generate mock data functions with external types file import 1`] = `
"/* eslint-disable @typescript-eslint/no-use-before-define,@typescript-eslint/no-unused-vars */
import { Avatar, User } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '1550ff93-cd31-49b4-bc38-ef1cb68bdc38',
        url: 'aliquid',
        ...overrides
    });
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'b5756f00-51a6-422a-9a7d-c13ee6a63750',
        login: 'libero',
        avatar: anAvatar(),
        ...overrides
    });
};
"
`;
